ide/tree-sitter-athena/grammar.js
    source_file: $ => seq(
      optional(choice($.package_declaration, $.incomplete_package_declaration)),
      repeat(choice($.import_declaration, $.incomplete_import_declaration)),
      choice(
        $.system_declaration,
        repeat1($._representation_declaration),
      ),
    ),

    _representation_declaration: $ => choice(
      $.symbol_declaration,
      $.element_declaration,
      $.profile_declaration,
      $.binding_declaration,
    ),

    package_declaration: $ => seq(
      'package',
      $._header_space,
      field('name', $.package_name),
    ),

    import_declaration: $ => seq(
      'import',
      $._header_space,
      field('target', $.package_name),
    ),

    // Explicit low-precedence nodes keep following declarations usable while the author types.
    // They are syntax recovery only and never produce compiler/LSP diagnostics or package meaning.
    package_name: _ => token.immediate(seq(
      /[A-Za-z_][A-Za-z0-9_]*/,
      repeat(seq('-', /[A-Za-z_][A-Za-z0-9_]*/)),
      repeat(seq(
        '.',
        /[A-Za-z_][A-Za-z0-9_]*/,
        repeat(seq('-', /[A-Za-z_][A-Za-z0-9_]*/)),
      )),
    )),

    _header_space: _ => token.immediate(/[ \t]+/),

    system_declaration: $ => seq(
      'system',
      field('name', alias($.identifier, $.name)),
      '{',
      repeat($.declaration),
      optional('}'),
    ),

    declaration: $ => choice(
      $.entity_declaration,
      $.port_declaration,
      $.connect_declaration,
      $.relation_declaration,
      $.evidence_declaration,
      $.projection_policy_declaration,
      $.layout_declaration,
      $.installation_declaration,
    ),

    profile_value_name: _ => token(/[A-Za-z_][A-Za-z0-9_]*(?:-[A-Za-z_][A-Za-z0-9_]*)*/),

    entity_declaration: $ => seq(
      'entity',
      field('name', alias($.identifier, $.name)),
      '{',
      repeat($._entity_member),
      optional('}'),
    ),

    _entity_member: $ => choice(
      $.interface_declaration,
      $.property_assignment,
      $.nested_port_declaration,
      $.function_declaration,
      $.structure_assignment,
    ),

    interface_declaration: $ => seq(
      token(prec(1, 'interface')),
      field('name', alias($.identifier, $.name)),
      '{',
      repeat(choice($.property_assignment, $.interface_ports)),
      optional('}'),
    ),

    interface_ports: $ => seq(
      token(prec(1, 'ports')),
      '{',
      repeat($.interface_port_member),
      optional('}'),
    ),

    interface_port_member: $ => seq(
      field('name', alias($.identifier, $.name)),
      optional(seq(
        '{',
        repeat($.property_assignment),
        optional('}'),
      )),
    ),

    nested_port_declaration: $ => seq(
      'port',
      field('name', alias($.identifier, $.name)),
      '{',
      repeat($.property_assignment),
      optional('}'),
    ),

    port_declaration: $ => seq(
      'port',
      $.qualified_name,
      '{',
      repeat($.property_assignment),
      optional('}'),
    ),

    connect_declaration: $ => seq(
      'connect',
      field('name', alias($.identifier, $.name)),
      choice(
        seq(
          field('from', $.qualified_name),
          $._connection_separator,
          field('to', $.qualified_name),
        ),
        seq(
          '{',
          repeat($.connect_group_edge),
          '}',
        ),
      ),
    ),

    connect_group_edge: $ => seq(
      field('name', alias($.identifier, $.name)),
      field('from', $.qualified_name),
      $._connection_separator,
      field('to', $.qualified_name),
    ),

    relation_declaration: $ => seq(
      field('word', alias($.identifier, $.relation_word)),
      field('from', $.qualified_name),
      $._connection_separator,
      field('targets', $.relation_targets),
    ),

    _connection_separator: _ => choice('to', '->'),

    relation_targets: $ => choice(
      $.qualified_name,
      seq('[', commaSep1($.qualified_name), ']'),
    ),

    evidence_declaration: $ => seq(
      token(prec(1, 'evidence')),
      field('name', alias($.identifier, $.name)),
      '{',
      repeat($._evidence_member),
      optional('}'),
    ),

    _evidence_member: $ => choice(
      $.evidence_namespace,
      $.evidence_reference,
      $.evidence_subject,
      $.evidence_provenance,
    ),

    evidence_namespace: $ => seq(
      'namespace',
      field('value', $.identifier),
    ),

    evidence_reference: $ => seq(
      'reference',
      field('value', $.string),
    ),

    evidence_subject: $ => seq(
      'subject',
      field('kind', $.evidence_subject_kind),
      field('target', $.qualified_name),
    ),

    evidence_subject_kind: _ => choice(
      'contract',
      'interface',
      'port',
      'relation-contract',
      'route-policy',
    ),

    evidence_provenance: $ => seq(
      'provenance',
      field('value', $.string),
    ),

    projection_policy_declaration: $ => seq(
      token(prec(1, 'projection')),
      field('name', alias($.identifier, $.name)),
      '{',
      repeat($._projection_policy_member),
      optional('}'),
    ),

    _projection_policy_member: $ => choice(
      $.projection_policy_target,
      $.projection_policy_layout,
      $.projection_policy_drawing_profile,
      $.projection_policy_route_quality,
      $.projection_policy_proof,
      $.projection_policy_forbidden_truth,
    ),

    projection_policy_target: $ => seq(
      'target',
      field('value', $.profile_value_name),
    ),

    projection_policy_layout: $ => seq(
      'layout',
      field('value', $.profile_value_name),
    ),

    projection_policy_drawing_profile: $ => seq(
      'drawingProfile',
      field('value', $.identifier),
    ),

    projection_policy_route_quality: $ => seq(
      'routeQuality',
      field('value', $.identifier),
    ),

    projection_policy_proof: $ => seq(
      'proof',
      field('value', $.profile_value_name),
    ),

    layout_declaration: $ => seq(
      'layout',
      field('view_family', $.view_family_name),
      '{',
      repeat($.layout_statement),
      '}',
    ),

    view_family_name: _ => token(/[A-Za-z_][A-Za-z0-9_]*(?:-[A-Za-z_][A-Za-z0-9_]*)*/),

    layout_statement: $ => choice(
      $.place_statement,
      $.fixed_place_statement,
      $.align_statement,
      $.group_statement,
    ),

    place_statement: $ => seq(
      'place',
      field('subject', $.identifier),
      $.layout_placement_relation,
      field('target', $.identifier),
    ),

    positive_integer: _ => /[1-9][0-9]*/,

    layout_orientation: _ => choice(
      'horizontal',
      'vertical',
    ),

    layout_placement_relation: _ => choice(
      'near',
      'below',
    ),

    align_statement: $ => seq(
      'align',
      field('subject', $.identifier),
      'aligned-with',
      field('target', $.identifier),
      'axis',
      field('axis', $.layout_axis),
    ),

    layout_axis: _ => choice(
      'horizontal',
      'vertical',
    ),

    group_statement: $ => seq(
      'group',
      field('subject', $.identifier),
      'grouped-with',
      field('target', $.identifier),
    ),

    installation_declaration: $ => seq(
      token(prec(1, 'installation')),
      token(prec(1, 'cabinet')),
      field('name', alias($.identifier, $.name)),
      '{',
      repeat($._installation_member),
      optional('}'),
    ),

    _installation_member: $ => choice(
      $.installation_enclosure,
      $.installation_surface,
      $.installation_rail,
      $.installation_duct,
      $.installation_channel,
      $.installation_terminal_group,
      $.installation_mount,
      $.installation_route,
    ),

    installation_enclosure: $ => seq(
      'enclosure',
      field('name', alias($.identifier, $.name)),
      'size',
      field('size', $.length_tuple3),
    ),

    installation_surface: $ => seq(
      'surface',
      field('name', alias($.identifier, $.name)),
      'in',
      field('enclosure', $.identifier),
      'at',
      field('origin', $.length_point),
      'size',
      field('size', $.length_size),
      'accepts',
      field('mounting_types', $.identifier_list),
    ),

    installation_rail: $ => seq(
      'rail',
      field('name', alias($.identifier, $.name)),
      'on',
      field('surface', $.identifier),
      'at',
      field('origin', $.length_point),
      'length',
      field('length', $.length_literal),
      'orientation',
      field('orientation', $.layout_orientation),
      'mounting',
      field('mounting_type', $.identifier),
    ),

    installation_duct: $ => seq(
      'duct',
      field('name', alias($.identifier, $.name)),
      'in',
      field('enclosure', $.identifier),
      'at',
      field('origin', $.length_point),
      'size',
      field('size', $.length_size),
      'orientation',
      field('orientation', $.layout_orientation),
      'wall',
      field('wall', $.length_literal),
    ),

    installation_channel: $ => seq(
      'channel',
      field('name', alias($.identifier, $.name)),
      'in',
      field('duct', $.identifier),
      'at',
      field('origin', $.length_point),
      'size',
      field('size', $.length_size),
      'lanes',
      field('lanes', $.positive_integer),
      'margin',
      field('margin', $.length_literal),
    ),

    installation_terminal_group: $ => seq(
      'terminal-group',
      field('name', alias($.identifier, $.name)),
      'in',
      field('enclosure', $.identifier),
      'at',
      field('origin', $.length_point),
      'size',
      field('size', $.length_size),
      'orientation',
      field('orientation', $.layout_orientation),
      'accepts',
      field('mounting_types', $.identifier_list),
    ),

    installation_mount: $ => seq(
      'mount',
      field('device', $.identifier),
      'as',
      field('name', alias($.identifier, $.name)),
      'on',
      field('target', $.identifier),
      'at',
      field('origin', $.length_point),
      '{',
      repeat(choice(
        seq('footprint', field('footprint', $.length_tuple3)),
        seq('mounting', field('mounting_type', $.identifier)),
        seq('orientation', field('orientation', $.mount_orientation)),
        seq('allowed-orientations', field('allowed_orientations', $.mount_orientation_list)),
        seq('clearance', field('clearance', $.length_tuple4)),
        seq('compatible-containers', field('compatible_containers', $.identifier_list)),
      )),
      '}',
    ),

    mount_orientation: _ => choice('deg0', 'deg90', 'deg180', 'deg270'),

    mount_orientation_list: $ => seq(
      '[',
      commaSep1($.mount_orientation),
      ']',
    ),

    installation_route: $ => seq(
      'route',
      field('connection', $.identifier),
      'through',
      field('channels', $.identifier_list),
    ),

    identifier_list: $ => seq(
      '[',
      commaSep1($.identifier),
      ']',
    ),

    length_point: $ => seq(
      '(',
      $.length_literal,
      ',',
      $.length_literal,
      ')',
    ),

    length_size: $ => seq(
      '(',
      $.length_literal,
      ',',
      $.length_literal,
      ')',
    ),

    length_tuple4: $ => seq(
      '(',
      $.length_literal,
      ',',
      $.length_literal,
      ',',
      $.length_literal,
      ',',
      $.length_literal,
      ')',
    ),

    length_tuple3: $ => seq(
      '(',
      $.length_literal,
      ',',
      $.length_literal,
      ',',
      $.length_literal,
      ')',
    ),

    length_literal: _ => token(prec(1, /-?[0-9]+(?:\.[0-9]+)?mm/)),

    qualified_name: $ => seq(
      $.identifier,
      repeat(seq('.', $.identifier)),
    ),

    property_assignment: $ => seq(
      alias($.identifier, $.property_name),
      $._scalar_value,
    ),

    _scalar_value: $ => choice(
      $.quantity,
      $.boolean,
      $.reference_value,
      $.identifier,
      $.string,
      $.number,
    ),

    quantity: $ => seq(
      field('value', $.number),
      '[',
      field('unit', $.qualified_name),
      ']',
    ),

    identifier: $ => /[A-Za-z_][A-Za-z0-9_]*/,

    number: _ => /-?[0-9]+(?:\.[0-9]+)?/,

    string: $ => seq(
      '"',
      optional($.string_content),
      '"',
    ),

    string_content: $ => /[^"\r\n]+/,
  },
});

function commaSep1(rule) {
  return seq(rule, repeat(seq(',', rule)));
}
