ide/tree-sitter-athena/test/corpus/connections.txt
==================
Typed nets and connection specifications
==================
system Control {
  connection-spec project { conductorType copper }
  connection-spec signal Control24V { colorCode black }
  net StartCircuit signal {
    source PLC1.out
    sink KM1.coil
    pass X1.p1
    signal Control24V
    crossSection 0.75 [mm2]
  }
}
---
(source_file
  (system_declaration
    (name)
    (declaration
      (connection_specification_declaration
        (property_assignment
          (property_name)
          (identifier))))
    (declaration
      (connection_specification_declaration
        (qualified_name
          (identifier))
        (property_assignment
          (property_name)
          (identifier))))
    (declaration
      (net_declaration
        (name)
        (connection_kind
          (identifier))
        (qualified_name
          (identifier)
          (identifier))
        (qualified_name
          (identifier)
          (identifier))
        (qualified_name
          (identifier)
          (identifier))
        (qualified_name
          (identifier))
        (property_assignment
          (property_name)
          (quantity
            (number)
            (qualified_name
              (identifier))))))))
