ide/tree-sitter-athena/test/corpus/device.txt
==============================
Device declaration with fields
==============================

system Demo {
  device PLC1 {
    type Switch
    model "S7-1200"
  }
}

---

(source_file
  (system_declaration
    name: (name)
    (declaration
      (device_declaration
        name: (name)
        (property_assignment
          (property_name)
          (identifier))
        (property_assignment
          (property_name)
          (string
            (string_content)))))))

==============================
Device declaration with no fields
==============================

system Demo {
  device PLC1 {
  }
}

---

(source_file
  (system_declaration
    name: (name)
    (declaration
      (device_declaration
        name: (name)))))

==============================
Device grouped connectivity interface
==============================

system Demo {
  device Drive {
    type MotorDrive
    connectivity enabled

    interface powerInput {
      type power
      direction in
      signal PowerAC
      role line
      multiplicity single

      ports {
        L1
        PE {
          signal ProtectiveEarth
          role protective_earth
          direction passive
        }
      }
    }
  }
}

---

(source_file
  (system_declaration
    name: (name)
    (declaration
      (device_declaration
        name: (name)
        (property_assignment
          (property_name)
          (identifier))
        (property_assignment
          (property_name)
          (identifier))
        (interface_declaration
          name: (name)
          (property_assignment
            (property_name)
            (identifier))
          (property_assignment
            (property_name)
            (identifier))
          (property_assignment
            (property_name)
            (identifier))
          (property_assignment
            (property_name)
            (identifier))
          (property_assignment
            (property_name)
            (identifier))
          (interface_ports
            (interface_port_member
              name: (name))
            (interface_port_member
              name: (name)
              (property_assignment
                (property_name)
                (identifier))
              (property_assignment
                (property_name)
                (identifier))
              (property_assignment
                (property_name)
                (identifier)))))))))
