ide/tree-sitter-athena/test/corpus/installation.txt
============================
Cabinet installation forms
============================

system Demo {
  entity QF1 {
    concept Breaker
  }
  entity M1 {
    concept Motor
  }
  port QF1.line {
    direction out
  }
  port M1.line {
    direction in
  }
  connect feeder QF1.line to M1.line

  installation cabinet MainCabinet {
    enclosure ENC1 size (800mm, 600mm, 250mm)
    surface Backplate in ENC1 at (20mm, 20mm) size (760mm, 560mm) accepts [din35, screw]
    rail DIN1 on Backplate at (60mm, 120mm) length 680mm orientation horizontal mounting din35
    duct D1 in ENC1 at (30mm, 60mm) size (40mm, 480mm) orientation vertical wall 2mm
    channel C1 in D1 at (4mm, 8mm) size (32mm, 464mm) lanes 4 margin 2mm
    terminal-group XT1 in ENC1 at (560mm, 420mm) size (160mm, 80mm) orientation horizontal accepts [terminal]
    mount QF1 as QF1Mount on DIN1 at (0mm, 0mm) {
      footprint (45mm, 90mm, 72mm)
      mounting din35
      orientation deg0
      allowed-orientations [deg0, deg180]
      clearance (5mm, 5mm, 10mm, 10mm)
      compatible-containers [rail]
    }
    mount M1 as M1Mount on DIN1 at (100mm, 0mm) {
      footprint (80mm, 120mm, 100mm)
      mounting din35
      orientation deg0
      allowed-orientations [deg0]
      clearance (10mm, 10mm, 20mm, 20mm)
      compatible-containers [rail]
    }
    route feeder through [C1]
  }
}

---

(source_file
  (system_declaration
    name: (name)
    (declaration
      (entity_declaration
        name: (name)
        (property_assignment
          (property_name)
          (identifier))))
    (declaration
      (entity_declaration
        name: (name)
        (property_assignment
          (property_name)
          (identifier))))
    (declaration
      (port_declaration
        (qualified_name
          (identifier)
          (identifier))
        (property_assignment
          (property_name)
          (identifier))))
    (declaration
      (port_declaration
        (qualified_name
          (identifier)
          (identifier))
        (property_assignment
          (property_name)
          (identifier))))
    (declaration
      (connect_declaration
        name: (name)
        from: (qualified_name
          (identifier)
          (identifier))
        to: (qualified_name
          (identifier)
          (identifier))))
    (declaration
      (installation_declaration
        name: (name)
        (installation_enclosure
          name: (name)
          size: (length_tuple3
            (length_literal)
            (length_literal)
            (length_literal)))
        (installation_surface
          name: (name)
          enclosure: (identifier)
          origin: (length_point
            (length_literal)
            (length_literal))
          size: (length_size
            (length_literal)
            (length_literal))
          mounting_types: (identifier_list
            (identifier)
            (identifier)))
        (installation_rail
          name: (name)
          surface: (identifier)
          origin: (length_point
            (length_literal)
            (length_literal))
          length: (length_literal)
          orientation: (layout_orientation)
          mounting_type: (identifier))
        (installation_duct
          name: (name)
          enclosure: (identifier)
          origin: (length_point
            (length_literal)
            (length_literal))
          size: (length_size
            (length_literal)
            (length_literal))
          orientation: (layout_orientation)
          wall: (length_literal))
        (installation_channel
          name: (name)
          duct: (identifier)
          origin: (length_point
            (length_literal)
            (length_literal))
          size: (length_size
            (length_literal)
            (length_literal))
          lanes: (positive_integer)
          margin: (length_literal))
        (installation_terminal_group
          name: (name)
          enclosure: (identifier)
          origin: (length_point
            (length_literal)
            (length_literal))
          size: (length_size
            (length_literal)
            (length_literal))
          orientation: (layout_orientation)
          mounting_types: (identifier_list
            (identifier)))
        (installation_mount
          device: (identifier)
          name: (name)
          target: (identifier)
          origin: (length_point
            (length_literal)
            (length_literal))
          footprint: (length_tuple3
            (length_literal)
            (length_literal)
            (length_literal))
          mounting_type: (identifier)
          orientation: (mount_orientation)
          allowed_orientations: (mount_orientation_list
            (mount_orientation)
            (mount_orientation))
          clearance: (length_tuple4
            (length_literal)
            (length_literal)
            (length_literal)
            (length_literal))
          compatible_containers: (identifier_list
            (identifier)))
        (installation_mount
          device: (identifier)
          name: (name)
          target: (identifier)
          origin: (length_point
            (length_literal)
            (length_literal))
          footprint: (length_tuple3
            (length_literal)
            (length_literal)
            (length_literal))
          mounting_type: (identifier)
          orientation: (mount_orientation)
          allowed_orientations: (mount_orientation_list
            (mount_orientation))
          clearance: (length_tuple4
            (length_literal)
            (length_literal)
            (length_literal)
            (length_literal))
          compatible_containers: (identifier_list
            (identifier)))
        (installation_route
          connection: (identifier)
          channels: (identifier_list
            (identifier)))))))
