ide/tree-sitter-athena/test/corpus/port.txt
==============================
Port declaration with qualified name and fields
==============================

system Demo {
  entity PLC1 {
    concept Switch
  }
  port PLC1.out {
    direction out
    flow Digital
  }
}

---

(source_file
  (system_declaration
    name: (name)
    (declaration
      (entity_declaration
        name: (name)
        (property_assignment
          (property_name)
          (identifier))))
    (declaration
      (port_declaration
        (qualified_name
          (identifier)
          (identifier))
        (property_assignment
          (property_name)
          (identifier))
        (property_assignment
          (property_name)
          (identifier))))))

==============================
Port declaration with quoted property value
==============================

system Demo {
  port PLC1.out {
    direction "out"
  }
}

---

(source_file
  (system_declaration
    name: (name)
    (declaration
      (port_declaration
        (qualified_name
          (identifier)
          (identifier))
        (property_assignment
          (property_name)
          (string
            (string_content)))))))

==============================
Nested Entity-owned port declaration
==============================

system Demo {
  entity SpareTerminalXT99 {
    concept Switch
    model "SPARE-XT"

    port in1 {
      direction in
      flow Digital
    }
  }
}

---

(source_file
  (system_declaration
    name: (name)
    (declaration
      (entity_declaration
        name: (name)
        (property_assignment
          (property_name)
          (identifier))
        (property_assignment
          (property_name)
          (string
            (string_content)))
        (nested_port_declaration
          name: (name)
          (property_assignment
            (property_name)
            (identifier))
          (property_assignment
            (property_name)
            (identifier)))))))
